--- a/web/templates/blog.html
+++ b/web/templates/blog.html
@@ -30,8 +30,8 @@
 			<div class="container">
 				
 				<div class="row">
-
-					{% for blogg in blogs %}
+					<a href="{{blogg.img.url}}" class="href">
+						{% for blogg in blogs %}
 					<div class="col-12 col-sm-6 col-md-4 mb-5">
 						<div class="post-entry">
 							<a href="#" class="post-thumbnail"><img src="{{blogg.img.url}}" alt="Image" class="img-fluid"></a>
@@ -44,6 +44,9 @@
 						</div>
 					</div>
 					{% endfor %}
+					</a>
+
+					
 
 					
 				</div>
