--- a/web/templates/shop.html
+++ b/web/templates/shop.html
@@ -8,6 +8,8 @@
 						<div class="col-lg-5">
 							<div class="intro-excerpt">
 								<h1>Shop</h1>
+								<p class="mb-4">Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam vulputate velit imperdiet dolor tempor tristique.</p>
+								<p><a href="#" class="btn btn-secondary me-2">Explore</a></p>
 							</div>
 						</div>
 						<div class="col-lg-7">
