--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -39,7 +39,7 @@
 						<li class="nav-item {% if nav == 'about' %} active {% endif %}"><a class="nav-link" href="{% url 'web:about' %}">About us</a></li>
 						<li class="nav-item {% if nav == 'services' %} active {% endif %}"><a class="nav-link" href="{% url 'web:services' %}">Services</a></li>
 						<li class="nav-item {% if nav == 'blog' %} active {% endif %}"><a class="nav-link" href="{% url 'web:blog' %}">Blog</a></li>  -->
-						<li class="nav-item {% if nav == 'register' %} active {% endif %}" ><a class="nav-link" href="{% url 'web:register' %}">Register</a></li> 
+						<li class="nav-item {% if nav == 'register' %} active {% endif %}" ><a class="nav-link" href="{% url 'accounts:register' %}">Register</a></li> 
 						<li class="nav-item {% if nav == 'contact' %} active {% endif %}"><a class="nav-link" href="{% url 'web:contact' %}">Contact us</a></li>
 					</ul>
 
