--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -35,16 +35,24 @@
 						<li class="nav-item {% if nav == 'home' %} active {% endif %}">
 							<a class="nav-link" href="{% url 'web:index' %}">Home</a>
 						</li>
-						 <!-- <li class="nav-item {% if nav == 'shop' %} active {% endif %}" ><a class="nav-link" href="{% url 'web:shop' %}">Shop</a></li>
-						<li class="nav-item {% if nav == 'about' %} active {% endif %}"><a class="nav-link" href="{% url 'web:about' %}">About us</a></li>
-						<li class="nav-item {% if nav == 'services' %} active {% endif %}"><a class="nav-link" href="{% url 'web:services' %}">Services</a></li>
-						<li class="nav-item {% if nav == 'blog' %} active {% endif %}"><a class="nav-link" href="{% url 'web:blog' %}">Blog</a></li>  -->
-						<li class="nav-item {% if nav == 'register' %} active {% endif %}" ><a class="nav-link" href="{% url 'accounts:register' %}">Register</a></li> 
+						{% if user.is_authenticated %}
+							<li class="nav-item {% if nav == 'shop' %} active {% endif %}" ><a class="nav-link" href="{% url 'web:shop' %}">Shop</a></li>
+							<li class="nav-item {% if nav == 'about' %} active {% endif %}"><a class="nav-link" href="{% url 'web:about' %}">About us</a></li>
+							<li class="nav-item {% if nav == 'services' %} active {% endif %}"><a class="nav-link" href="{% url 'web:services' %}">Services</a></li>
+							<li class="nav-item {% if nav == 'blog' %} active {% endif %}"><a class="nav-link" href="{% url 'web:blog' %}">Blog</a></li>
+							<li class="nav-item {% if nav == 'contact' %} active {% endif %}"><a class="nav-link" href="{% url 'accounts:logout' %}">Logout</a></li> 
+						{% else %}
+							<li class="nav-item {% if nav == 'register' %} active {% endif %}" ><a class="nav-link" href="{% url 'accounts:register' %}">Register</a></li> 
+							<li class="nav-item {% if nav == 'contact' %} active {% endif %}"><a class="nav-link" href="{% url 'accounts:sign_in' %}">Login</a></li>
+							
+						{% endif %}
 						<li class="nav-item {% if nav == 'contact' %} active {% endif %}"><a class="nav-link" href="{% url 'web:contact' %}">Contact us</a></li>
+						
 					</ul>
 
 					<ul class="custom-navbar-cta navbar-nav mb-2 mb-md-0 ms-5">
-						<li><a class="nav-link" href="{% url 'web:register' %}"><img src="{%static 'images/user.svg' %}"></a></li>
+						<!-- <li><a class="nav-link" href="{% url 'web:register' %}"><img src="{%static 'images/user.svg' %}"></a></li> -->
+						<li>{{ user.username }}</li>
 						<li><a class="nav-link" href="{% url 'web:cart' %}"><img src="{%static 'images/cart.svg' %}"></a></li>
 					</ul>
 				</div>
