--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -42,8 +42,7 @@
 							<li class="nav-item {% if nav == 'blog' %} active {% endif %}"><a class="nav-link" href="{% url 'web:blog' %}">Blog</a></li>
 							<li class="nav-item {% if nav == 'contact' %} active {% endif %}"><a class="nav-link" href="{% url 'accounts:logout' %}">Logout</a></li> 
 						{% else %}
-							<li class="nav-item {% if nav == 'register' %} active {% endif %}" ><a class="nav-link" href="{% url 'accounts:register' %}">Register</a></li> 
-							<li class="nav-item {% if nav == 'contact' %} active {% endif %}"><a class="nav-link" href="{% url 'accounts:sign_in' %}">Login</a></li>
+							<li class="nav-item {% if nav == 'register' %} active {% endif %}" ><a class="nav-link" href="{% url 'accounts:register' %}">Register/Login</a></li> 
 							
 						{% endif %}
 						<li class="nav-item {% if nav == 'contact' %} active {% endif %}"><a class="nav-link" href="{% url 'web:contact' %}">Contact us</a></li>
