--- a/web/templates/shop.html
+++ b/web/templates/shop.html
@@ -1,59 +1,52 @@
-{% extends 'base.html' %}
-{% load static %}
-{% block content %}
-		<!-- Start Hero Section -->
-			<div class="hero">
-				<div class="container">
-					<div class="row justify-content-between">
-						<div class="col-lg-5">
-							<div class="intro-excerpt">
-								<h1>Shop</h1>
-								<p class="mb-4">Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam vulputate velit imperdiet dolor tempor tristique.</p>
-								<p><a href="#" class="btn btn-secondary me-2">Explore</a></p>
-							</div>
-						</div>
-						<div class="col-lg-7">
-							
-						</div>
-					</div>
-				</div>
-			</div>
-		<!-- End Hero Section -->
+{% extends 'base.html' %} {% load static %} {% block content %}
+<!-- Start Hero Section -->
+<div class="hero">
+  <div class="container">
+    <div class="row justify-content-between">
+      <div class="col-lg-5">
+        <div class="intro-excerpt">
+          <h1>Shop</h1>
+          <p class="mb-4">
+            Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet
+            velit. Aliquam vulputate velit imperdiet dolor tempor tristique.
+          </p>
+          <p><a href="#" class="btn btn-secondary me-2">Explore</a></p>
+        </div>
+      </div>
+      <div class="col-lg-7"></div>
+    </div>
+  </div>
+</div>
+<!-- End Hero Section -->
 
-		
+<div class="untree_co-section product-section before-footer-section">
+  <div class="container">
+    <div class="row">
+      {% for furni in furnitures %}
+      <!-- Start Column  -->
+      <div class="col-12 col-md-4 col-lg-3 mb-5">
+        <a class="product-item" href="/web/item/{{furni.id}}">
+          <img src="{{furni.img.url}}" , class="img-fluid product-thumbnail" />
+          {% if furni.offer %}
+          <div class="spec_offer text-center">
+            <a href="#">special offer</a>
+          </div>
+          {% endif %}
+          <h3 class="product-title">{{furni.name}}</h3>
+          <div class="furniture-description">
+            <p>{{furni.description}}</p>
+          </div>
+          <strong class="product-price">${{furni.price}}</strong>
 
-		<div class="untree_co-section product-section before-footer-section">
-		    <div class="container">
-		      	<div class="row">
-
-                    {% for furni in furnitures %}
-		      		<!-- Start Column  -->
-					<div class="col-12 col-md-4 col-lg-3 mb-5">
-						<a class="product-item" href="/web/item/{{furni.id}}">
-							<img src="{{furni.img.url}}", class="img-fluid product-thumbnail">
-							{% if furni.offer %}
-							<div class="spec_offer text-center"> <a href="#">special offer</a> </div>
-							{% endif %}
-							<h3 class="product-title">{{furni.name}}</h3>
-							<div class="furniture-description">
-								<p>
-									{{furni.description}}
-								</p>
-							</div>
-							<strong class="product-price">${{furni.price}}</strong>
-
-							<span class="icon-cross">
-								<img src="{%static 'images/cross.svg'%}" class="img-fluid">
-							</span>
-						</a>
-					</div> 
-					{% endfor %}
-					<!-- End Column  -->
-		      	</div>
-		    </div>
-		</div>
-
+          <span class="icon-cross">
+            <img src="{%static 'images/cross.svg'%}" class="img-fluid" />
+          </span>
+        </a>
+      </div>
+      {% endfor %}
+      <!-- End Column  -->
+    </div>
+  </div>
+</div>
 
 {% endblock %}
-
-	
