--- a/web/templates/sign_up.html
+++ b/web/templates/sign_up.html
@@ -1,122 +1,80 @@
 {% load static %}
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>SIGN UP FORM</title>
-    <link rel="shortcut icon" href="{% static 'images/fav.png' %}" type="image/x-icon">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
-        href="{% static 'https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i&display=swap' %}"
-        rel="stylesheet">
-    <link rel="shortcut icon" href="{% static 'images/fav.jpg' %}">
-    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
-    <link rel="stylesheet" href="{% static 'css/all.min.css' %}">
-    <link rel="stylesheet" href="{% static 'css/animate.css' %}">
-    <link rel="stylesheet" href="{% static 'css/animate.css' %}">
-    <link rel="stylesheet" href="{% static 'plugins/slider/css/owl.carousel.min.css' %}">
-    <link rel="stylesheet" href="{% static 'plugins/slider/css/owl.theme.default.css' %}">
-    <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}" />
-</head>
+      rel="stylesheet"
+      href="{%static 'https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css' %}"
+    />
+    <link rel="stylesheet" href="{%static 'css/style1.css' %}" />
+    <title>Modern Login Page | AsmrProg</title>
+  </head>
 
-<body class="form-login-body">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-9 mx-auto login-desk">
-                <div class="row">
-
-                    <div class="col-md-5 loginform">
-                        <div class="log-txt row no-margin">
-                            <h2>Most Advanced Marketing <br>
-                                Login Page Template </h2>
-                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum
-                                has been the industry's </p>
-                            <p><a href="{% url 'accounts:sign_in' %}" class="btn btn-secondary me-2">Create Account</a>
-                            </p>
-
-                        </div>
-
-                        <div class="login-det">
-                            <img src="{%static 'images/art-direction.png' %}" alt="">
-                        </div>
-                    </div>
-                    <div class="col-md-6 detail-box">
-                        <form action="" method="post">
-                            {% csrf_token %}
-
-                            <div class="detailsh col-lg-5 col-md-9 col-sm-5 col-9 mx-auto">
-                                <img class="logo" src="{%static 'images/logo.png' %}" alt="">
-
-                                <div class="row form-ro no-margin">
-                                    <div class="row form-ro no-margin">
-                                        <input type="text" name="user_name" placeholder="Username"
-                                            class="form-control form-control-sm">
-                                    </div>
-
-
-                                    <div class="row form-ro no-margin">
-                                        <input type="password" name="password" placeholder="Password"
-                                            class="form-control form-control-sm">
-                                    </div>
-
-                                    <input type="submit">
-
-                                    <div class="row form-ro hlio fgbh">
-                                        <div class="col-md-14">
-                                            <p>Don't have an Account <a href="{% url 'accounts:register' %}">Sign In</a> </p>
-                                        </div>
-
-                                    </div>
-                                </div>
-                        </form>
-                    </div>
-                </div>
-
-            </div>
+  <body>
+    <div class="container" id="container">
+      <div class="form-container sign-up">
+        <form method="post" action="{% url 'accounts:register' %}">
+            {% csrf_token %}
+          <h1>Create Account</h1>
+          <div class="social-icons">
+            <a href="#" class="icon"
+              ><i class="fa-brands fa-google-plus-g"></i
+            ></a>
+            <a href="#" class="icon"><i class="fa-brands fa-facebook-f"></i></a>
+            <a href="#" class="icon"><i class="fa-brands fa-github"></i></a>
+            <a href="#" class="icon"
+              ><i class="fa-brands fa-linkedin-in"></i
+            ></a>
+          </div>
+          <span>or use your email for registeration</span>
+          <input type="text" placeholder="username" name="user_name"/>
+          <input type="email" placeholder="Email" name="email" />
+          <input type="password" placeholder="Password" name="password" />
+          <input type="password" placeholder="confirm_Password" name="confirm_password" />
+          <button>Sign Up</button>
+        </form>
+      </div>
+      <div class="form-container sign-in">
+        <form method="post" action="{% url 'accounts:sign_in' %}">
+            {% csrf_token %}
+          <h1>Sign In</h1>
+          <div class="social-icons">
+            <a href="#" class="icon"
+              ><i class="fa-brands fa-google-plus-g"></i
+            ></a>
+            <a href="#" class="icon"><i class="fa-brands fa-facebook-f"></i></a>
+            <a href="#" class="icon"><i class="fa-brands fa-github"></i></a>
+            <a href="#" class="icon"
+              ><i class="fa-brands fa-linkedin-in"></i
+            ></a>
+          </div>
+          <span>or use your email password</span>
+          <input type="text" placeholder="username" name="user_name" />
+          <input type="password" placeholder="Password" name="password"/>
+          <a href="#">Forget Your Password?</a>
+          <button>Sign In</button>
+        </form>
+      </div>
+      <div class="toggle-container">
+        <div class="toggle">
+          <div class="toggle-panel toggle-left">
+            <h1>Welcome Back!</h1>
+            <p>Enter your personal details to use all of site features</p>
+            <button class="hidden" id="login">Sign In</button>
+          </div>
+          <div class="toggle-panel toggle-right">
+            <h1>Hello, Friend!</h1>
+            <p>
+              Register with your personal details to use all of site features
+            </p>
+            <button class="hidden" id="register">Sign Up</button>
+          </div>
         </div>
+      </div>
     </div>
-</body>
 
-<script src="{%static 'js/jquery-3.2.1.min.js' %}"></script>
-<script src="{%static 'js/popper.min.js' %}"></script>
-<script src="{%static 'js/bootstrap.min.js' %}"></script>
-<script src="{%static 'plugins/scroll-fixed/jquery-scrolltofixed-min.js' %}"></script>
-<script src="{%static 'plugins/slider/js/owl.carousel.min.js' %}"></script>
-<script src="{%static 'js/script.js' %}"></script>
-
-</html>
-<!doctype html>
-<html lang="en">
-
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Free Tour and Travel Website Tempalte | Smarteyeapps.com</title>
-    <link rel="shortcut icon" href="{%static 'images/fav.png' %}" type="image/x-icon">
-    <link
-        href="{%static 'https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i&display=swap' %}"
-        rel="stylesheet">
-    <link rel="shortcut icon" href="{%static 'images/fav.jpg' %}">
-    <link rel="stylesheet" href="{%static 'css/bootstrap.min.css' %}">
-    <link rel="stylesheet" href="{%static 'css/all.min.css' %}">
-    <link rel="stylesheet" href="{%static 'css/animate.css' %}">
-    <link rel="stylesheet" href="{%static 'plugins/slider/css/owl.carousel.min.css' %}">
-    <link rel="stylesheet" href="{%static 'plugins/slider/css/owl.theme.default.css' %}">
-    <link rel="stylesheet" type="text/css" href="{%static 'css/style.css' %}" />
-</head>
-
-<body>
-
-
-
-</body>
-
-<script src="{%static 'js/jquery-3.2.1.min.js' %}"></script>
-<script src="{%static 'js/popper.min.js' %}"></script>
-<script src="{%static 'js/bootstrap.min.js' %}"></script>
-<script src="{%static 'plugins/scroll-fixed/jquery-scrolltofixed-min.js' %}"></script>
-<script src="{%static 'plugins/slider/js/owl.carousel.min.js' %}"></script>
-<script src="{%static 'js/script.js' %}"></script>
-
+    <script src="{% static 'js/script1.js' %}"></script>
+  </body>
 </html>
